AI文檔、文檔格式更新 (#5)
* 新增ai.md (#1)

* 將AI功能加入側邊選項列表 (#2)

* 新增ai.md

* 新增nav bar

* Update ai.md

* Update about.md

* Update about.md

* 更新文字：文黨->文檔

* 更新ai.md的內容

* 美化指令樣式

* 新增文檔格式介紹檔案

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: DYBTS Docs
+site_name: DYBTS 文檔
 theme:
   name: material
 plugins:
@@ -18,3 +18,6 @@ markdown_extensions:
 nav:
   - 首頁: 'index.md'
   - 關於DYBTS: 'about.md'
+  - 文檔格式介紹: 'format.md'
+  - 功能:
+    - AI: 'ai.md'
